--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  touch-action: none;
+  touch-action: manipulation;
 }
 
 @media (max-width: 899px) {
